--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@reduxjs/toolkit": "^2.9.1",
+    "axios": "^1.13.2",
     "install": "^0.13.0",
     "lucide-react": "^0.546.0",
     "npm": "^11.6.2",
